# auto_class

./: .gitignore  errors.yaml  gemini_video_summary_test.py  main.py  pyproject.toml
capture_20250509_084605/: note_recording_20250509_090108.md
