[project]
name = "auto-class"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "moviepy>=1.0.3",  # ffmpeg-python の代わりに moviepy を追加
    "google-generativeai>=0.8.5",
    "mss>=10.0.0",
    "numpy>=2.2.5",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "python-docx>=1.1.2",
    "pywin32>=310",
    "scipy>=1.15.2",
    # "sounddevice>=0.5.1", # sounddevice を削除
    # "PyAudio>=0.2.14",   # PyAudio を削除
    "SoundCard",  # バージョン指定を削除して uv sync に解決を任せる
]
